[package]
name = "supervent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16"
core_affinity = "0.8"
crossbeam-channel = "0.5"
metrics = "0.21"
tracing = "0.1"
fastrand = "2.0"
lazy_static = "1.4"
